# of_blockMesh_utils

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/meshing_utils/: __init__.py  exceptions.py
src/meshing_utils/cad/: __init__.py  step_loader.py
src/meshing_utils/cad/face_matching/: __init__.py  geometry.py  matching.py  tolerances.py
src/meshing_utils/cad/step_names/: __init__.py  named_solid.py  parsing.py  paths.py  resolution.py
src/meshing_utils/cli/: base.py  clean_bmd.py  combine_bmd.py  extract_cell_zones.py  extract_patches.py  extrude_surfaces.py  revolve_bmd.py  scale_bmd.py  split_bmd_by_zones.py  stp_to_bmd.py
src/meshing_utils/foam/: __init__.py  dict_file.py  templates.py
src/meshing_utils/foam/elements/: __init__.py  block.py  edge.py  face.py  markable.py  patch.py  vertex.py
src/meshing_utils/geometry/: __init__.py  cell_count.py  containment.py  rotations.py  vectors.py
src/meshing_utils/geometry/hex_axes/: __init__.py  axes.py  detection.py
src/meshing_utils/geometry/hex_topology/: __init__.py  algorithms.py  core.py
src/meshing_utils/io/: __init__.py  parser.py  serializer.py  step_text_scan.py
src/meshing_utils/operations/: __init__.py  combine.py  extract_patches.py  revolve.py  scale.py  split_by_zones.py
src/meshing_utils/operations/cell_zones/: __init__.py  classification.py  constants.py  core.py  naming.py  resolution.py
src/meshing_utils/operations/extrusion/: __init__.py  builders.py  core.py  exceptions.py  markers.py  parsing.py  validation.py
src/meshing_utils/operations/stp_pipeline/: __init__.py  assembly.py  config.py  conflicts.py  edges.py  loading.py  parsing.py  pipeline.py  transforms.py  units.py
tests/: generate_snapshots.py  test_exceptions.py  test_public_api.py  test_snapshots.py
tests/cad/: test_face_matching.py  test_step_loader.py  test_step_names.py
tests/cli/: conftest.py  test_base.py  test_clean_bmd.py  test_combine_bmd_cli.py  test_extract_cell_zones.py  test_extract_patches.py  test_extrude_surfaces.py  test_revolve_bmd.py  test_scale_bmd.py  test_split_bmd_by_zones.py  test_stp_to_bmd_flags.py
tests/fixtures/: blockMeshDict_komplett  example_blockMeshDict
tests/fixtures/snapshots/: blockMeshDict_extrude.foam  blockMeshDict_minimal.foam
tests/foam/: test_containers.py  test_dict_file.py
tests/foam/elements/: test_block.py  test_edge.py  test_face.py  test_markable.py  test_patch.py  test_vertex.py
tests/geometry/: test_cell_count.py  test_cell_count_new.py  test_containment.py  test_hex_axes.py  test_hex_topology.py  test_longest_edges.py  test_vectors.py
tests/io/: test_parser.py  test_step_text_scan.py
tests/operations/: conftest.py  test_cell_zones.py  test_combine.py  test_extrusion.py  test_revolve.py  test_scale.py  test_split_by_zones.py  test_stp_pipeline.py
